src/tests/snapshots/cendol__tests__parser__atomic_qualifier_syntax.snap
---
source: src/tests/parser.rs
expression: "&resolved"
---
Declaration:
  specifiers:
    - TypeQualifier(Atomic)
    - int
  init_declarators:
    - name: x
      kind: pointer
