src/tests/snapshots/cendol__tests__parser__complex_declarator_arr_of_ptr_to_func.snap
---
source: src/tests/parser.rs
expression: "&resolved"
---
Declaration:
  specifiers:
    - int
  init_declarators:
    - name: f
      kind: function(int) -> pointer to array
