src/tests/snapshots/cendol__tests__parser__compound_literal.snap
---
source: src/tests/parser.rs
expression: "&resolved"
---
CompoundLiteral:
  - parsed_type_1
  - InitializerList:
      - LiteralInt: 1
