src/tests/snapshots/cendol__tests__parser__compound_literal_struct.snap
---
source: src/tests/parser.rs
expression: "&resolved"
---
CompoundLiteral:
  - parsed_type_1
  - InitializerList:
      - LiteralInt: 1
      - LiteralInt: 2
