src/tests/snapshots/cendol__tests__parser__const_volatile_pointer.snap
---
source: src/tests/parser.rs
expression: "&resolved"
---
Declaration:
  specifiers:
    - int
  init_declarators:
    - name: x
      kind: pointer
