src/tests/snapshots/cendol__tests__parser__function_definition.snap
---
source: src/tests/parser.rs
expression: "&resolved"
---
TranslationUnit:
  - FunctionDef:
      specifiers:
        - int
      declarator:
        name: main
        kind: function(void) -> int
      body:
        CompoundStatement:
          - Return:
              LiteralInt: 0
