src/tests/snapshots/cendol__tests__parser__translation_unit.snap
---
source: src/tests/parser.rs
expression: "&resolved"
---
TranslationUnit:
  - Declaration:
      specifiers:
        - int
      init_declarators:
        - name: x
  - FunctionDef:
      specifiers:
        - int
      declarator:
        name: main
        kind: function(void) -> int
      body:
        CompoundStatement:
          - Return:
              Ident: x
